--- a/ThreadIoT.html
+++ b/ThreadIoT.html
@@ -130,13 +130,26 @@
            <p><strong>End Customer:</strong> Thread IoT (Internal Project) </p>
             <p><strong>Operation:</strong> Enhance school children's security system with real-time location tracking, geofencing, emergency alerts, attendance management, and integration with school systems.</p>
         </div>
+<div class="training">
+            <h3>7. Porus Calculator </h3>
+           <p><strong>Open Source</strong> </p>
+            <p><strong>Operation:</strong> Calculate SIP, EMI, Percentage, FD etc. Refer <a href ="https://mainthreadiot.github.io/PorusCalculator/">https://mainthreadiot.github.io/PorusCalculator/</p>
+        </div>
+
+	    <div class="training">
+            <h3>8. Thread IoT ultimate Utility Tool </h3>
+           <p><strong>Open Source</strong> </p>
+            <p><strong>Operation:</strong> Refer <a href="https://mainthreadiot.github.io/porus/">https://mainthreadiot.github.io/porus/</a></p>
+        </div>
+
+	    https://mainthreadiot.github.io/PorusCalculator/
 		<div class="training">
-            <h3>7. HeathLink </h3>
+            <h3>9. HeathLink </h3>
            <p><strong>End Customer:</strong> Thread IoT (Internal Project) </p>
             <p><strong>Operation:</strong> : This portal will enable doctors to add patients, administer treatments, select default treatment templates, send treatment information via phone, search for previous reports, and attach reports.</p>
         </div>
 		<div class="training">
-            <h3>8. Resident Management System </h3>
+            <h3>10. Resident Management System </h3>
            <p><strong>End Customer:</strong> Thread IoT (Internal Project) </p>
             <p><strong>Operation:</strong> : A unified platform for visitor and resident management, featuring a visitor approval system, parking slots, resident information, and various search options.</p>
         </div>
@@ -151,6 +164,8 @@
         </div>
     </section>
 
+	
+	
     <section id="contact">
         <h2>Contact Us</h2>
         <div class="contact-info">
